--- a/sln/vs10/postfix/sample_list/sample_list.vcxproj
+++ b/sln/vs10/postfix/sample_list/sample_list.vcxproj
@@ -11,9 +11,9 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{43156AFC-ACE5-4C05-AC53-999DAEFF72A1}</ProjectGuid>
+    <ProjectGuid>{F8256B73-9D7F-410F-A3A8-D16F8C0C2D95}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>sample_stack</RootNamespace>
+    <RootNamespace>sample_list</RootNamespace>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -55,8 +55,8 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>../Debug</AdditionalLibraryDirectories>
       <AdditionalDependencies>stack.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>../Debug</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -75,12 +75,12 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalLibraryDirectories>../Release</AdditionalLibraryDirectories>
       <AdditionalDependencies>stack.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>../Release</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\..\..\samples\sample_stack.cpp" />
+    <ClCompile Include="..\..\..\..\samples\sample_list.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\stack\stack.vcxproj">
