--- a/sln/vs10/postfix/sample_postfix/sample_postfix.vcxproj
+++ b/sln/vs10/postfix/sample_postfix/sample_postfix.vcxproj
@@ -11,9 +11,9 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{43156AFC-ACE5-4C05-AC53-999DAEFF72A1}</ProjectGuid>
+    <ProjectGuid>{D1E50691-1B36-4CBD-B4AC-7AA278EF909E}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>sample_stack</RootNamespace>
+    <RootNamespace>sample_postfix</RootNamespace>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -55,8 +55,8 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>postfix_notation.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>../Debug</AdditionalLibraryDirectories>
-      <AdditionalDependencies>stack.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -75,16 +75,16 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
+      <AdditionalDependencies>postfix_notation.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>../Release</AdditionalLibraryDirectories>
-      <AdditionalDependencies>stack.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\..\..\samples\sample_stack.cpp" />
+    <ClCompile Include="..\..\..\..\samples\sample_postfix.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\stack\stack.vcxproj">
-      <Project>{075416f7-7acd-4611-8c8b-391fc7d2cdc4}</Project>
+    <ProjectReference Include="..\postfix_notation\postfix_notation.vcxproj">
+      <Project>{8995405c-178f-492a-8916-8525990a5317}</Project>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
